syntax = 'proto3';

package proto.mqtt;

option go_package = "proto";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";


message MqttMessage {
    string command = 1;
    bytes message = 2;
}
